--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           
           </li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-          <li><a class="getstarted scrollto" href="spy app beta version.apk">Download</a></li>
+          <li><a class="getstarted scrollto" href="https://myspyapps.com/">Download</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -75,7 +75,7 @@
           <div>
             <h1>India’s No 1 Mobile Monitoring App</h1>
             <h2>Monitor Calls Logs, Call recordings, Live Surround sound, Live Screen Streaming, WhatsApp, Facebook and other social media platforms or instant messaging platforms instantly with MySpyApps. MySpyApps is Very Easy to use, It takes only a few minutes to download and Install on the phone which you want to monitor.</h2>
-            <a href="spy app beta version.apk" class="download-btn"><i class="bx bxl-play-store"></i> Download</a>
+            <a href="https://myspyapps.com/" class="download-btn"><i class="bx bxl-play-store"></i> Download</a>
             <a href="https://youtu.be/GQTWLvh0xXQ" class="download-btn"><i class="bx bxl-youtube"></i> Live Demo</a>
           </div>
         </div>
