--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <h1>India’s No 1 Mobile Monitoring App</h1>
             <h2>Monitor Calls Logs, Call recordings, Live Surround sound, Live Screen Streaming, WhatsApp, Facebook and other social media platforms or instant messaging platforms instantly with MySpyApps. MySpyApps is Very Easy to use, It takes only a few minutes to download and Install on the phone which you want to monitor.</h2>
             <a href="https://myspyapps.com/" class="download-btn"><i class="bx bxl-play-store"></i> Download</a>
-            <a href="https://youtu.be/GQTWLvh0xXQ" class="download-btn"><i class="bx bxl-youtube"></i> Live Demo</a>
+            <a href="https://www.youtube.com/channel/UCzOf2WOtD3FVzOEEDVxciTA" class="download-btn"><i class="bx bxl-youtube"></i> Live Demo</a>
           </div>
         </div>
         <div class="col-lg-6 d-lg-flex flex-lg-column align-items-stretch order-1 order-lg-2 hero-img" data-aos="fade-up">
