--- a/index.html
+++ b/index.html
@@ -166,6 +166,8 @@
         <div class="row content">
           <div class="col-md-4" data-aos="fade-right">
             <img src="assets/img/hero-img.png" class="img-fluid" alt="">
+		  <script async="async" data-cfasync="false" src="//pl16313469.safestcontentgate.com/f1cabe382ad832b79b4bcc5019e3f15b/invoke.js"></script>
+<div id="container-f1cabe382ad832b79b4bcc5019e3f15b"></div>
           </div>
           <div class="col-md-8 pt-4" data-aos="fade-up">
             <h3>Lifetime Free App Features</h3>
